# gh-llm

./: README.md  gh-llm  justfile  pyproject.toml
.github/workflows/: lint-and-fmt.yml  unit-test.yml
skills/github-conversation/: SKILL.md
src/gh_llm/: __init__.py  __main__.py  cache.py  cli.py  diagnostics.py  environment.py  github_api.py  invocation.py  models.py  pager.py  pr_body.py  render.py
src/gh_llm/commands/: doctor.py  issue.py  options.py  pr.py  repo.py
tests/: test_cli.py  test_command_options.py  test_extension_entrypoint.py  test_pr_body.py
