[project]
name = "gh-llm"
version = "0.1.10"
description = "🤖 CLI tooling for LLM-first GitHub reading and review workflows."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [{ name = "Nyakku Shigure", email = "sigure.qaq@gmail.com" }]
keywords = ["github", "cli", "llm", "code-review", "pull-requests", "issues"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/ShigureLab/gh-llm"
Documentation = "https://github.com/ShigureLab/gh-llm"
Repository = "https://github.com/ShigureLab/gh-llm"
Issues = "https://github.com/ShigureLab/gh-llm/issues"

[project.scripts]
gh-llm = "gh_llm.__main__:main"

[dependency-groups]
dev = [
  "pyright>=1.1.407",
  "ruff>=0.14.10",
  "pytest>=9.0.2",
  "pytest-rerunfailures>=16.1",
]

[tool.pyright]
include = ["src/gh_llm", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # Isort
  "I",
  # Comprehensions
  "C4",
  # Debugger
  "T100",
  # Pyupgrade
  "UP",
  # Flake8-pyi
  "PYI",
  # Bugbear
  "B",
  # Pylint
  "PLE",
  # Flake8-simplify
  "SIM101",
  # Flake8-use-pathlib
  "PTH",
  # Pygrep-hooks
  "PGH004",
  # Flake8-type-checking
  "TC",
  # Flake8-raise
  "RSE",
  # Refurb
  "FURB",
  # Flake8-future-annotations
  "FA",
  # Yesqa
  "RUF100",
]
ignore = [
  "E501", # line too long, duplicate with ruff fmt
  "F401", # imported but unused, duplicate with pyright
  "F841", # local variable is assigned to but never used, duplicate with pyright
]
future-annotations = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["gh_llm"]
combine-as-imports = true

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
